[package]
name = "fuck_scan_drive"
version = "1.0.0"
edition = "2021"
authors = ["FuckScanDrive Contributors"]
license = "MIT"
description = "Block malicious disk scanning and file operations by rogue software"

[dependencies]
eframe = "0.29"
egui = "0.29"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace]
members = ["hook_dll"]
