[package]
name = "fuck_scan_hook"
version = "1.0.0"
edition = "2021"
authors = ["FuckScanDrive Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
] }
once_cell = "1.19"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
